--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,30 +1,65 @@
 <h1>お天気アプリ</h1>
+
+<div class='panel panel-default' style='margin: 10px;'>
+<div class='panel-heading'>
+
 <form>
-  <select name='area'>
+  <select name='area' class="form-control">
     <option value=''>東京</option>
   </select>
 <form><br />
 
-<div id='main'>
-  <div class='main_item'>Yesterday</div>
-  <div class='main_item'>Today<br />
-  <img src='<%= @icon %>' /><br />
-  <span><%= @temp_max %><br /><%= @temp_min %></span>
+</div>
+<div class='panel-body'>
+
+<div class='container-fluid'>
+  <div class='row'>
+  <div class='col-sm-7'>
+    <div class='container-fluid'>
+      <div class='row main'>
+        <div class='col-sm-3'><div class='panel panel-info'>
+          <div class='panel-heading'>昨日</div>
+          <div class='panel-body'>
+            <img src='/icon/01d.png' /><br />
+            <span class='max'>100℃</span><br />
+            <span class='min'>0℃</span>
+          </div>
+        </div></div>
+        <div class='col-sm-6'><div class='panel panel-primary'>
+          <div class='panel-heading'>今日（<%= (Date.today).strftime("%m月%d日") %>）</div>
+          <div class='panel-body'>
+            <img src='<%= @icon %>' /><br />
+            <span class='max'><%= @temp_max %></span><br />
+            <span class='min'><%= @temp_min %></span>
+          </div>
+        </div></div>
+        <div class='col-sm-3'><div class='panel panel-info'>
+          <div class='panel-heading'>明日</div>
+          <div class='panel-body'>
+            <img src='/icon/01d.png' /><br />
+            <span class='max'>100℃</span><br />
+            <span class='min'>0℃</span>
+          </div>
+        </div></div>
+      </div>
+    </div>
   </div>
-  <div class='main_item'>Tomorrow</div>
-  <div class='empty'></div>
+  <div class='col-sm-5'>
+    <p>Rain prediction here.</p>
+  </div>
+  </div>
 </div>
-<div id='rain'>
-  <p>Rain prediction here.</p>
-</div>
-<div class='empty'></div>
+
 <div id='weekly'>
-  <p>Weekly forecast here.</p>
-  <div class='weekly_item'>1<br />aa<br />bb</div>
-  <div class='weekly_item'>2</div>
-  <div class='weekly_item'>3</div>
-  <div class='weekly_item'>4</div>
-  <div class='weekly_item'>5</div>
-  <div class='weekly_item'>6</div>
-  <div class='weekly_item'>7</div>
+  <div class='container-fluid'><div class='row weekly'>
+    <% (1..7).each do |i| %>
+    <div class='col-sm-1'><div class='panel panel-default'>
+      <div class='panel-heading'><%= (Date.today + i).strftime("%m/%d") %></div>
+      <div class='panel-body'><img src='/icon/01d.png' /><br /><span class='max'>100℃</span><br /><span class='min'>0℃</span></div>
+    </div></div>
+    <% end %>
+    <div class='col-sm-5'></div>
+</div>
+
+</div>
 </div>
