--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,8 +16,15 @@
  @import "bootstrap";
 
  .weekly .col-sm-1 { padding: 0 2px;}
-/* .main .col-sm-3 {padding: 0 2px;}
- .main .col-sm-6 {padding: 0 2px;} */
- .main { margin: 0 -40px;}
+ .main {
+    margin: 0 -40px;
+    display: flex;
+    .panel {
+      height: 90%;
+    }
+  }
  .min { color: #428bca; font-weight: bold;}
  .max { color: #d9534f; font-weight: bold;}
+ .prec { font-weight: bold;
+    .prec-icon { margin-right: 4px;}
+  }
