--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,50 +14,83 @@
 
 <div class='container-fluid'>
   <div class='row'>
-  <div class='col-sm-7'>
-    <div class='container-fluid'>
-      <div class='row main'>
-        <div class='col-sm-3'><div class='panel panel-info'>
-          <div class='panel-heading'>昨日</div>
-          <div class='panel-body'>
-            <img src='/icon/01d.png' /><br />
-            <span class='max'>100℃</span><br />
-            <span class='min'>0℃</span>
-          </div>
-        </div></div>
-        <div class='col-sm-6'><div class='panel panel-primary'>
-          <div class='panel-heading'>今日（<%= (Date.today).strftime("%m月%d日") %>）</div>
-          <div class='panel-body'>
-            <img src='<%= @icon %>' /><br />
-            <span class='max'><%= @temp_max %></span><br />
-            <span class='min'><%= @temp_min %></span>
-          </div>
-        </div></div>
-        <div class='col-sm-3'><div class='panel panel-info'>
-          <div class='panel-heading'>明日</div>
-          <div class='panel-body'>
-            <img src='/icon/01d.png' /><br />
-            <span class='max'>100℃</span><br />
-            <span class='min'>0℃</span>
-          </div>
-        </div></div>
+    <div class='col-sm-7'>
+      <div class='container-fluid'>
+        <div class='row main'>
+          <div class='col-sm-3'><div class='panel panel-info'>
+            <div class='panel-heading'>昨日</div>
+            <div class='panel-body'>
+              <img src='<%= @yest[:icon] %>' /><br />
+              <span class='max'><%= @yest[:max] %></span><br />
+              <span class='min'><%= @yest[:min] %></span>
+            </div>
+          </div></div>
+          <div class='col-sm-6'><div class='panel panel-primary'>
+            <div class='panel-heading'>今日（<%= (Date.today).strftime("%m月%d日") %>）</div>
+            <div class='panel-body'>
+              <div class='container-fluid'><div class='row'>
+                <div class='col-sm-7'>
+                  <img src='<%= @list[0][:icon] %>' /><br />
+                  <span class='prec'><img src='/image/img02.png' class='prec-icon'/><%= @list[0][:prec] %></span>
+                </div>
+                <div>
+                  <span class='max'><%= @list[0][:max] %></span><br />
+                  <span class='min'><%= @list[0][:min] %></span>
+                </div>
+              </div></div>
+            </div>
+          </div></div>
+          <div class='col-sm-3'><div class='panel panel-info'>
+            <div class='panel-heading'>明日</div>
+            <div class='panel-body'>
+              <img src='<%= @list[1][:icon] %>' /><br />
+              <span class='max'><%= @list[1][:max] %></span><br />
+              <span class='min'><%= @list[1][:min] %></span>
+            </div>
+          </div></div>
+        </div>
       </div>
+  
+  
+  
+  
+  </div>
+    <div class='col-sm-5'>
+      <canvas id='myChart' height='200'></canvas>
+      <script>
+        var ctx = document.getElementById("myChart").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+            labels: <%= @graph.keys.to_json.html_safe %>,
+            datasets: [{
+              label: "降水確率",
+              data: <%= @graph.values.map{|v| v*100} %>,
+              backgroundColor: 'rgba(66, 139, 202, 1.0)',
+              borderColor: 'rgba(66, 139, 202, 1.0)',
+              fill: false
+            }]
+          },
+          options: {
+            title:  {
+              display: false,
+              text: "タイトル"
+            }
+          }
+        });
+      </script>
     </div>
-  </div>
-  <div class='col-sm-5'>
-    <p>Rain prediction here.</p>
-  </div>
   </div>
 </div>
 
 <div id='weekly'>
   <div class='container-fluid'><div class='row weekly'>
-    <% (0..4).each do |i| %>
+    <% (0..6).each do |i| %>
     <div class='col-sm-1'><div class='panel panel-default'>
       <div class='panel-heading'><%= (Date.today + i).strftime("%m/%d") %></div>
       <div class='panel-body'><img src='<%= @list[i][:icon] %>' /><br />
-      <span class='max'><%= @list[i][:temp_max] %></span><br />
-      <span class='min'><%= @list[i][:temp_min] %></span></div>
+      <span class='max'><%= @list[i][:max] %></span><br />
+      <span class='min'><%= @list[i][:min] %></span></div>
     </div></div>
     <% end %>
     <div class='col-sm-5'></div>
