--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,12 +49,21 @@
             </div>
           </div></div>
         </div>
+        <div id='row'>
+          <div class='container-fluid'><div class='row weekly'>
+            <% (0..6).each do |i| %>
+            <div class='panel panel-default week'>
+              <div class='panel-heading'><%= (Date.today + i).strftime("%m/%d") %></div>
+              <div class='panel-body'><img src='<%= @list[i][:icon] %>' /><br />
+              <span class='max'><%= @list[i][:max] %></span><br />
+              <span class='min'><%= @list[i][:min] %></span></div>
+            </div>
+            <% end %>
+            <div class='col-sm-5'></div>
+          </div></div>
+        </div>
       </div>
-  
-  
-  
-  
-  </div>
+    </div>
     <div class='col-sm-5'>
       <canvas id='myChart' height='200'></canvas>
       <script>
@@ -81,19 +90,6 @@
       </script>
     </div>
   </div>
-</div>
-
-<div id='weekly'>
-  <div class='container-fluid'><div class='row weekly'>
-    <% (0..6).each do |i| %>
-    <div class='col-sm-1'><div class='panel panel-default'>
-      <div class='panel-heading'><%= (Date.today + i).strftime("%m/%d") %></div>
-      <div class='panel-body'><img src='<%= @list[i][:icon] %>' /><br />
-      <span class='max'><%= @list[i][:max] %></span><br />
-      <span class='min'><%= @list[i][:min] %></span></div>
-    </div></div>
-    <% end %>
-    <div class='col-sm-5'></div>
 </div>
 
 </div>
