js部分のリファクタリング

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,70 +17,13 @@
   <input type='button' value='現在地を取得' id='loc' />
 </form>
 <script>
-  $(function() {
-  $("#loc").click(function() {
-    if ( navigator.geolocation ){
-        navigator.geolocation.getCurrentPosition(
-        function(position){
-          lat = position.coords.latitude;
-          lon = position.coords.longitude;
-          coord = lat + ',' + lon;
-          window.location.href='../coord,' + coord;
-        },
-        function(err){
-          window.alert(err.code + "," + err.message);
-        },
-        {
-          "enableHighAccuracy": false,
-          "timeout": 10000,
-          "maximumAge": 2000
-        }
-      );
-    } else {
-      window.alert('位置情報が取得できません。');
-    }  
-  });
-
-  //同じもの並列、非常に冗長。
-  $("#p").val(<%= "#{@pref}".to_json.html_safe %>);
-  $.getJSON('https://geoapi.heartrails.com/api/json?jsonp=?',
-    {
-      method: 'getCities',
-      prefecture: p.value
-    }
-  )
-  // 結果を取得したら…
-  .done(function(data) {
-    if (data.response) {
-      var result = data.response.location;
-      for(var i=0;i<result.length;i++){
-        let op = document.createElement("option");
-        op.value= result[i].city;
-        op.text = result[i].city;
-        document.getElementById("c").appendChild(op);
-      }
-    } else {
-      window.alert(data.response);
-    }
-  $("#c").val(<%= "#{@city}".to_json.html_safe %>);
-  });
-  $('#p').change(function() {
-    sl = document.getElementById('c');
-    while(sl.lastChild){
-      sl.removeChild(sl.lastChild);
-    }
-    op = document.createElement("option");
-    op.value = '未選択';
-    op.text = '未選択';
-    document.getElementById("c").appendChild(op);
-
+  function addCities(){
     $.getJSON('https://geoapi.heartrails.com/api/json?jsonp=?',
       {
         method: 'getCities',
         prefecture: p.value
       }
     )
-    // 結果を取得したら…
     .done(function(data) {
       if (data.response) {
         var result = data.response.location;
@@ -91,14 +34,54 @@
           document.getElementById("c").appendChild(op);
         }
       } else {
-        window.alert(data.response);
+        window.alert("APIの接続に失敗しました。");
       }
     });
+  }
+
+  $(function() {
+  $("#loc").click(function() {
+    if ( navigator.geolocation ){
+        navigator.geolocation.getCurrentPosition(
+        function(position){
+          coord = position.coords.latitude + ',' + position.coords.longitude;
+          window.location.href='../coord,' + coord;
+        },
+        function(err){
+          window.alert("位置情報が取得できませんでした。\n(" + err.code + "," + err.message + ")");
+        },
+        {
+          "enableHighAccuracy": false,
+          "timeout": 8000,
+          "maximumAge": 2000
+        }
+      );
+    } else {
+      window.alert('位置情報が取得できないブラウザです。');
+    }  
   });
+
+  $('#p').change(function() {
+    sl = document.getElementById('c');
+    while(sl.lastChild){ sl.removeChild(sl.lastChild); }
+    op = document.createElement("option");
+    op.value = '未選択';
+    op.text = '未選択';
+    document.getElementById("c").appendChild(op);
+    addCities();
+  });
+
   $('#c').change(function() {
+    addCities();
     window.location.href='./city,' + p.value + ',' + c.value 
   });
+  $("#p").val(<%= "#{@pref}".to_json.html_safe %>);
+  addCities();
+
+  $(window).load(function() {
+    $("#c").val(<%= "#{@city}".to_json.html_safe %>);
   });
+});
 
 </script>
 <br />
@@ -207,4 +190,3 @@
 
 </div>
 </div>
-
