スタイル無効事件解消

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,10 +14,7 @@
   </select>
 </form>
 <form style='margin-top: 8px;'>
-  <!--<input type='button' value='現在地を取得' id='loc' />
-  今後使うかも<input type='image' src="/image/gps.png" />-->
-  <button id='loc'><img src="/image/gps.png" /></button>
-  <button id='fav'><img src="/image/not-starred.png" /></button>
+  <input type='button' value='現在地を取得' id='loc' />
 </form>
 <script>
   function addCities(){
