--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,4 @@
-<h1>お天気アプリ</h1>
-
-<div class='panel panel-default' style='margin: 10px;'>
-<div class='panel-heading'>
-
+<%= render 'header' %>
 <form>
   <select id='p' class='form-control' style='margin: 5px;'>
   <% @pref_list.each do |pref| %>
@@ -81,111 +77,24 @@
     $("#c").val(<%= "#{@city}".to_json.html_safe %>);
   });
 });
-
 </script>
 <br />
-
-</div>
-<div class='panel-body'>
 
 <div class='container-fluid'>
   <div class='row'>
     <div class='col-sm-7'>
       <div class='container-fluid'>
         <div class='row main'>
-          <div class='col-xs-3 nar'><div class='panel panel-info'>
-            <div class='panel-heading'>昨日</div>
-            <div class='panel-body'>
-              <img src='<%= @yest[:icon] %>' /><br />
-              <span class='max'><%= @yest[:max] %></span><br />
-              <span class='min'><%= @yest[:min] %></span>
-            </div>
-          </div></div>
-          <div class='col-xs-6 nar'><div class='panel panel-primary'>
-            <div class='panel-heading'>今日（<%= (Date.today).strftime("%-m月%-d日") %>）</div>
-            <div class='panel-body'>
-              <div class='container-fluid'><div class='row'>
-                <div class='col-xs-7'>
-                  <img src='<%= @list[0][:icon] %>' /><br />
-                  <span class='prec'><img src='/image/img02.png' class='prec-icon'/><%= @list[0][:prec] %></span>
-                </div>
-                <div class='col-xs-5'>
-                  <span class='max'><%= @list[0][:max] %></span><br />
-                  <span class='min'><%= @list[0][:min] %></span>
-                </div>
-              </div></div>
-            </div>
-          </div></div>
-          <div class='col-xs-3 nar'><div class='panel panel-info'>
-            <div class='panel-heading'>明日</div>
-            <div class='panel-body'>
-              <img src='<%= @list[1][:icon] %>' /><br />
-              <span class='max'><%= @list[1][:max] %></span><br />
-              <span class='min'><%= @list[1][:min] %></span>
-            </div>
-          </div></div>
+          <%= render 'main' %>
         </div>
         <div class='row weekly'>
-          <% (0..6).each do |i| %>
-          <div class='panel panel-default week'>
-            <div class='panel-heading'><%= (Date.today + i).strftime("%-m/%-d") %></div>
-            <div class='panel-body'><img src='<%= @list[i][:icon] %>' /><br />
-            <span class='max'><%= @list[i][:max] %></span><br />
-            <span class='min'><%= @list[i][:min] %></span></div>
-          </div>
-          <% end %>
+          <%= render 'weekly' %>
         </div>
       </div>
     </div>
     <div class='col-sm-5'>
-      <div><span class='prec'><img src='/image/img02.png' class='prec-icon'/><%= @graph.values[0] * 100 %>%</span>（<%= Time.now.strftime("%-m/%-d %-H:00") %>）</div>
-      <canvas id='myChart' height='200' style='margin-top: 10px;'></canvas>
-      <script>
-        var ctx = document.getElementById("myChart").getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'line',
-            data: {
-            labels: <%= @graph.keys.to_json.html_safe %>,
-            datasets: [{
-              label: "降水確率",
-              data: <%= @graph.values.map{|v| v*100} %>,
-              backgroundColor: 'rgba(66, 139, 202, 1.0)',
-              borderColor: 'rgba(66, 139, 202, 1.0)',
-              fill: false
-            }]
-          },
-          options: {
-            title:  {
-              display: false,
-              text: "タイトル"
-            },
-            scales: {
-              xAxes: [{
-                display: true,
-                stacked: false,
-                gridLines: {
-                  display: false
-                }
-              }],
-              yAxes: [{
-                gridLines: {
-                  drawBorder: false
-                },
-                ticks: {
-                  beginAtZero: true,
-                  max: 100
-                }
-              }]
-            },
-            legend: {
-              display: false
-            }
-          }
-        });
-      </script>
+      <%= render 'prec' %>
     </div>
   </div>
 </div>
 
-</div>
-</div>
