--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
- </head>
+  </head>
 
   <body>
-    <%= yield %>
+    <%= render'layouts/header' %>
+    <div class="container fluid">
+      <%= yield %>
+    </div>
   </body>
 </html>
