--- a/app/views/welcome/_main.html.erb
+++ b/app/views/welcome/_main.html.erb
@@ -1,9 +1,9 @@
 <div class='col-xs-3 nar'><div class='panel panel-info'>
   <div class='panel-heading'>昨日</div>
     <div class='panel-body'>
-      <img src='<%= @yest[:icon] %>' /><br />
-      <span class='max'><%= @yest[:max] %></span><br />
-      <span class='min'><%= @yest[:min] %></span>
+      <img src='<%= @yesterday.icon %>' /><br />
+      <span class='max'><%= @yesterday.max %></span><br />
+      <span class='min'><%= @yesterday.min %></span>
     </div>
   </div>
 </div>
@@ -11,16 +11,14 @@
 <div class='col-xs-6 nar'><div class='panel panel-primary'>
   <div class='panel-heading'>今日（<%= (Date.today).strftime("%-m月%-d日") %>）</div>
     <div class='panel-body'>
-      <div class='container-fluid'>
-        <div class='row'>
-          <div class='col-xs-7'>
-            <img src='<%= @list[0][:icon] %>' /><br />
-            <span class='prec'><img src='/image/img02.png' class='prec-icon'/><%= @list[0][:prec] %></span>
-          </div>
-          <div class='col-xs-5'>
-            <span class='max'><%= @list[0][:max] %></span><br />
-            <span class='min'><%= @list[0][:min] %></span>
-          </div>
+      <div class='row'>
+        <div class='col-xs-7'>
+          <img src='<%= @daily[0].icon %>' /><br />
+          <span class='prec'><img src='/image/img02.png' class='prec-icon'/><%= @daily[0].prec %></span>
+        </div>
+        <div class='col-xs-5'>
+          <span class='max'><%= @daily[0].max %></span><br />
+          <span class='min'><%= @daily[0].min %></span>
         </div>
       </div>
     </div>
@@ -30,9 +28,9 @@
 <div class='col-xs-3 nar'><div class='panel panel-info'>
   <div class='panel-heading'>明日</div>
     <div class='panel-body'>
-      <img src='<%= @list[1][:icon] %>' /><br />
-      <span class='max'><%= @list[1][:max] %></span><br />
-      <span class='min'><%= @list[1][:min] %></span>
+      <img src='<%= @daily[1].icon %>' /><br />
+      <span class='max'><%= @daily[1].max %></span><br />
+      <span class='min'><%= @daily[1].min %></span>
     </div>
   </div>
 </div>
